<resources>
    <string name="app_name">RickAndMorty</string>

    <!-- Main -->
    <string name="loading_text">One moment, please…</string>
    <string name="generic_error_message">Ups, something went wrong…</string>

    <!-- Characters -->
    <string name="last_known_location">Last known location:</string>
    <string name="origin">Origin:</string>
    <string name="first_seen_in">First seen in</string>
    <string name="dimension">Dimension:</string>
    <string name="type">Type:</string>
    <string name="view_more">View more</string>
    <string name="residents">Residents</string>
    <string name="episode">Episode:</string>
    <string name="air_date">Air date:</string>
    <string name="episode_characters">Other characters in this episode</string>

    <!-- Help -->
    <string name="help_title">Just to confirm</string>
    <string name="help_character_details">You can see any character details by clicking on it.</string>
    <string name="help_location_details">To see location details (last known location or origin) please click on its name.</string>
    <string name="help_view_more_details">When you fully scroll down the list, a "View more" button will appear to allow you to load more characters.</string>
    <string name="help_list_appearance">It is possible to change the list appearance by click the proper menu option.</string>
    <string name="help_ok_button_text">OK</string>
</resources>