<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/rick_and_morty_purple"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/locationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/alatsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name of location" />

    <TextView
        android:id="@+id/locationTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationName" />

    <TextView
        android:id="@+id/locationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/locationTypeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/locationTypeTitle"
        app:layout_constraintTop_toTopOf="@id/locationTypeTitle"
        tools:text="TV" />

    <TextView
        android:id="@+id/dimensionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/dimension"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationTypeTitle" />

    <TextView
        android:id="@+id/dimension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/dimensionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dimensionTitle"
        app:layout_constraintTop_toTopOf="@id/dimensionTitle"
        tools:text="unknown" />

    <TextView
        android:id="@+id/residentsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/residents"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/alatsi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dimension" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/residentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/residentsTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>